	PR libfortran/20179 	* io/unix.c (fd_close): Add test so that we don't close() 	stdout and stderr.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@100353 138bc75d-0d04-0410-961f-82ee72b054a4